--- a/TechSolutions-program/TechSolutions-program.csproj
+++ b/TechSolutions-program/TechSolutions-program.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Tareas\" />
+    <Folder Include="SQLscripts\" />
   </ItemGroup>
 
 </Project>
